Converting values to proper units

--- a/config.json
+++ b/config.json
@@ -26,7 +26,7 @@
     "reverseGeocodingUrl": "http://reverse.geocoder.cit.api.here.com",
     "placesUrl": "http://places.cit.api.here.com",
     "routeUrl": "http://route.cit.api.here.com",
-    "appId": "o6sQzoKHP7KcJIJCy6Hb",
-    "appCode": "_H166SimcAJnjawmhTQsVw"
+    "appId": "U3zMQKY4zIGOTKd6uor2",
+    "appCode": "OJ_1KZM3We8MsR0LfKRyCQ"
   }
 }
